ajustes no banco para persistir valor numerico e adequação do código com enumeradores